# monero-serai

./: Cargo.toml  deny.toml
.github/workflows/: msrv.yml  tests.yml
coins/monero/src/: block.rs
coins/monero/src/ringct/: mod.rs
coins/monero/src/rpc/: http.rs  mod.rs
common/db/: Cargo.toml  README.md
common/db/src/: lib.rs  mem.rs
common/request/src/: response.rs
common/task/src/: lib.rs  type_name.rs
coordinator/: Cargo.toml  README.md
coordinator/cosign/: Cargo.toml
coordinator/cosign/src/: delay.rs  evaluator.rs  intend.rs  lib.rs
coordinator/p2p/: Cargo.toml  LICENSE  README.md
coordinator/p2p/libp2p/: Cargo.toml  README.md
coordinator/p2p/libp2p/src/: authenticate.rs  dial.rs  gossip.rs  lib.rs  ping.rs  reqres.rs  swarm.rs  validators.rs
coordinator/p2p/src/: heartbeat.rs  lib.rs  oneshot.rs
coordinator/src/: db.rs  dkg_confirmation.rs  main.rs  serai.rs  substrate.rs  tributary.rs
coordinator/src/p2p/: authenticate.rs  dial.rs  gossip.rs  heartbeat.rs  mod.rs  reqres.rs  swarm.rs  validators.rs
coordinator/src/p2p/libp2p/: authenticate.rs  dial.rs  gossip.rs  mod.rs  ping.rs  reqres.rs  swarm.rs  validators.rs
coordinator/src/tributary/: db.rs  mod.rs  scan.rs  transaction.rs
coordinator/substrate/: Cargo.toml  README.md
coordinator/substrate/src/: canonical.rs  ephemeral.rs  lib.rs  publish_batch.rs  publish_slash_report.rs  set_keys.rs
coordinator/tributary/: Cargo.toml  README.md
coordinator/tributary-sdk/: Cargo.toml
coordinator/tributary-sdk/src/: block.rs  lib.rs  mempool.rs
coordinator/tributary-sdk/src/tendermint/: mod.rs  tx.rs
coordinator/tributary-sdk/src/tests/: blockchain.rs
coordinator/tributary-sdk/src/tests/transaction/: mod.rs
coordinator/tributary-sdk/tendermint/: Cargo.toml
coordinator/tributary-sdk/tendermint/src/: ext.rs
coordinator/tributary-sdk/tendermint/tests/: ext.rs
coordinator/tributary/src/: blockchain.rs  db.rs  lib.rs  transaction.rs
coordinator/tributary/src/tests/: block.rs  p2p.rs  tendermint.rs
crypto/dalek-ff-group/src/: field.rs
crypto/dkg/src/evrf/: mod.rs
crypto/dleq/src/: lib.rs
crypto/evrf/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  lib.rs
crypto/frost/src/: sign.rs
crypto/multiexp/src/: lib.rs
message-queue/src/: client.rs
networks/ethereum/alloy-simple-request-transport/: Cargo.toml
networks/ethereum/schnorr/: Cargo.toml  README.md
networks/ethereum/schnorr/src/: lib.rs
networks/ethereum/schnorr/src/tests/: premise.rs
networks/monero/generators/src/: hash_to_point.rs  lib.rs
networks/monero/generators/src/tests/: mod.rs
networks/monero/io/src/: lib.rs
networks/monero/ringct/borromean/src/: lib.rs
networks/monero/ringct/bulletproofs/src/: lib.rs
networks/monero/ringct/clsag/src/: lib.rs  tests.rs
networks/monero/ringct/mlsag/src/: lib.rs
networks/monero/rpc/src/: lib.rs
networks/monero/src/: block.rs  lib.rs  merkle.rs  ring_signatures.rs  ringct.rs  transaction.rs
networks/monero/src/tests/: transaction.rs
networks/monero/verify-chain/src/: main.rs
networks/monero/wallet/address/src/: tests.rs
networks/monero/wallet/src/: lib.rs  scan.rs
networks/monero/wallet/src/send/: eventuality.rs  mod.rs  tx.rs  tx_keys.rs
networks/monero/wallet/tests/: eventuality.rs
processor/TODO/: main.rs
processor/bitcoin/src/: txindex.rs
processor/ethereum/: Cargo.toml
processor/ethereum/TODO/: old_processor.rs
processor/ethereum/TODO/tests/: mod.rs
processor/ethereum/deployer/: Cargo.toml  README.md
processor/ethereum/deployer/contracts/: Deployer.sol
processor/ethereum/deployer/src/: lib.rs  tests.rs
processor/ethereum/erc20/: Cargo.toml
processor/ethereum/erc20/contracts/: IERC20.sol
processor/ethereum/erc20/src/: lib.rs  tests.rs
processor/ethereum/primitives/: Cargo.toml
processor/ethereum/primitives/src/: borsh.rs  lib.rs
processor/ethereum/router/: Cargo.toml  build.rs
processor/ethereum/router/contracts/: IRouter.sol  Router.sol
processor/ethereum/router/src/: gas.rs  lib.rs
processor/ethereum/src/: main.rs  rpc.rs
processor/ethereum/src/primitives/: block.rs  output.rs  transaction.rs
processor/ethereum/test-primitives/: Cargo.toml
processor/ethereum/test-primitives/src/: lib.rs
processor/frost-attempt-manager/src/: individual.rs  lib.rs
processor/key-gen/src/: generators.rs
processor/key-gen/tests/: key_gen.rs
processor/messages/: Cargo.toml
processor/messages/src/: lib.rs
processor/scanner/: Cargo.toml
processor/scanner/src/: db.rs  lib.rs
processor/scanner/src/batch/: db.rs  mod.rs
processor/scanner/src/eventuality/: mod.rs
processor/scanner/src/index/: mod.rs
processor/scanner/src/report/: db.rs  mod.rs
processor/scanner/src/scan/: mod.rs
processor/scanner/src/substrate/: db.rs  mod.rs
processor/signers/: Cargo.toml
processor/signers/src/: db.rs  lib.rs  slash_report.rs  wrapped_schnorrkel.rs
processor/signers/src/batch/: db.rs  mod.rs
processor/signers/src/coordinator/: mod.rs
processor/signers/src/cosign/: mod.rs
processor/signers/src/transaction/: mod.rs
substrate/abi/src/: in_instructions.rs  validator_sets.rs
substrate/client/src/networks/: ethereum.rs
substrate/client/src/serai/: coins.rs  dex.rs  genesis_liquidity.rs  in_instructions.rs  liquidity_tokens.rs  mod.rs  validator_sets.rs
substrate/client/tests/: batch.rs  burn.rs  dex.rs  emissions.rs  validator_sets.rs
substrate/client/tests/common/: genesis_liquidity.rs  in_instructions.rs
substrate/emissions/pallet/src/: lib.rs
substrate/in-instructions/pallet/: Cargo.toml
substrate/in-instructions/pallet/src/: lib.rs
substrate/in-instructions/primitives/src/: lib.rs
substrate/node/: Cargo.toml
substrate/node/src/: rpc.rs
substrate/primitives/src/: account.rs  constants.rs
substrate/runtime/: build.rs
substrate/runtime/src/: abi.rs  lib.rs
substrate/validator-sets/pallet/src/: lib.rs
substrate/validator-sets/primitives/src/: lib.rs  slash_points.rs
tests/coordinator/: Cargo.toml
tests/full-stack/: Cargo.toml
tests/message-queue/src/: lib.rs
(+15 files in other folders)
