[package]
name = "serai-coordinator-tributary"
version = "0.1.0"
description = "The Tributary used by the Serai Coordinator"
license = "AGPL-3.0-only"
repository = "https://github.com/serai-dex/serai/tree/develop/coordinator/tributary"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"
publish = false
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
zeroize = { version = "^1.5", default-features = false, features = ["std"] }
rand_core = { version = "0.6", default-features = false, features = ["std"] }

blake2 = { version = "0.10", default-features = false, features = ["std"] }
ciphersuite = { path = "../../crypto/ciphersuite", default-features = false, features = ["std"] }
schnorr = { package = "schnorr-signatures", path = "../../crypto/schnorr", default-features = false, features = ["std"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["std", "derive"] }
borsh = { version = "1", default-features = false, features = ["std", "derive", "de_strict_order"] }

serai-client = { path = "../../substrate/client", default-features = false, features = ["serai", "borsh"] }

serai-db = { path = "../../common/db" }
serai-task = { path = "../../common/task", version = "0.1" }

tributary-sdk = { path = "../tributary-sdk" }

serai-cosign = { path = "../cosign" }
serai-coordinator-substrate = { path = "../substrate" }

messages = { package = "serai-processor-messages", path = "../../processor/messages" }

log = { version = "0.4", default-features = false, features = ["std"] }

[features]
longer-reattempts = []
